[AIM] Fix input overlapping Lens icon
Currently, the input expands down into the bottom row where the Lens icon and the submit button are. To fix this, I added a new <slot> to allow the embeders to decide what goes in that bottom footer. This allows the input to not expand into that space. However, since this is being CP'd, and to prevent conflicts, the header is currently empty. See demo in bug.

Tested to be a no-op on NTP.

Bug: b:457397813
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7125640
Commit-Queue: Duncan Mercer <mercerd@google.com>
Cr-Commit-Position: refs/heads/main@{#1541439}

--- a/ui/webui/resources/cr_components/composebox/composebox.css
+++ b/ui/webui/resources/cr_components/composebox/composebox.css
@@ -15,6 +15,7 @@
   --text-input-top-spacing: 10px;
   --text-input-inline-end-spacing: 80px;
   --text-input-inline-start-spacing: 16px;
+  --text-input-max-height: 190px;
   --expanded-border-radius: 26px;
   --brand-gradient: conic-gradient(
     rgba(52, 168, 82, 0) 0deg,
@@ -138,6 +139,7 @@
 
 #composebox {
   display: flex;
+  flex-direction: column;
   pointer-events: auto;
   position: relative;
   overflow: hidden;
@@ -263,7 +265,7 @@
   font-size: inherit;
   line-height: 24px;
   min-height: 48px;
-  max-height: 190px;
+  max-height: var(--text-input-max-height);
   padding-block: var(--text-input-top-spacing) 0;
   padding-inline: 12px var(--text-input-inline-end-spacing);
   scrollbar-width: none;
@@ -287,7 +289,7 @@
   color: var(--color-composebox-font-light);
   field-sizing: content;
   mask-image: linear-gradient(transparent 7px, black calc(var(--text-input-top-spacing) + 7px));
-  height: calc-size(fit-content, min(size + 4px, 190px));
+  height: calc-size(fit-content, min(size + 4px, var(--text-input-max-height)));
   outline: none;
   position: relative;
   resize: none;
@@ -690,7 +692,8 @@
 }
 
 :host([expanded_][show-file-carousel_][carousel-on-top_]) #inputContainer {
-  padding-top: 52px;
+  padding-top: 60px;
+  --text-input-max-height: 130px;
 }
 
 .carousel-divider {
